# Build-Python-PyPi_Project

./: README.md  pyproject.toml
src/diseasesClassification/: banana.h5  diseasesClassification.py  potato.h5
src/packageName/: package.py
