[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diseasesClassification"
version = "0.0.3"
authors = [
    { name="HSAkash", email="hemelakash472@gmail.com" },
]
description = "This is a project to classify diseases using machine learning"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HSAkash/Build-Python-PyPi_Project"
"Bug Tracker" = "https://github.com/HSAkash/Build-Python-PyPi_Project/issues"

